<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:padding="12dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/nameText"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subjectText"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:text="@string/subject"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText" />

    <TextView
        android:id="@+id/classText"
        android:layout_width="366dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/clazz"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectText" />

    <TextView
        android:id="@+id/schoolText"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/school"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classText" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/schoolText"
        app:layout_constraintVertical_bias="0.097">

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>